Updated Catalan translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-27  Jordi Mallach  <jordi@sindominio.net>
+
+	* ca.po: Updated Catalan translation.
+
 2005-01-26  Frank Arnold  <farnold@cvs.gnome.org>
 
 	* de.po: Removed context string in translation. Added comment.
