--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-27  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Update
+	* no.po: Update
+
 2004-01-27  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation.
