--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-01-30  Alessio Frusciante  <algol@firenze.linux.it>
+
+	* it.po: Updated Italian translation by
+	Alessio Dessì <alessiodessi@tiscali.it>.
+
 2005-01-29  Priit Laes  <plaes@cvs.gnome.org>
 
 	* et.po: Translation updated.
