--- a/po/et.po
+++ b/po/et.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: gtk+\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2005-01-29 12:35+0100\n"
-"PO-Revision-Date: 2005-01-29 20:47+0300\n"
-"Last-Translator: Priit Laes <amd@tt.ee>\n"
+"PO-Revision-Date: 2005-02-02 13:08+0200\n"
+"Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1038,7 +1038,7 @@ msgstr "Vigane failinimi: %s"
 
 #: gtk/gtkfilechooserbutton.c:65
 msgid "Select A File"
-msgstr "Vali fail"
+msgstr "Faili valimine"
 
 #: gtk/gtkfilechooserbutton.c:66
 #: gtk/gtkfilechooserdefault.c:1283
@@ -1058,7 +1058,7 @@ msgstr ""
 
 #: gtk/gtkfilechooserbutton.c:1515
 msgid "Other..."
-msgstr ""
+msgstr "Muu..."
 
 #: gtk/gtkfilechooserdefault.c:914
 msgid "Could not retrieve information about the file"
@@ -1493,12 +1493,12 @@ msgstr "Tõrge järjehoidja salvestamisel (%s)"
 #: gtk/gtkfilesystemunix.c:1498
 #, c-format
 msgid "'%s' already exists in the bookmarks list"
-msgstr "'%s' juba eksisteerib järjehoidjate loendis"
+msgstr "'%s' on juba järjehoidjate loendis olemas"
 
 #: gtk/gtkfilesystemunix.c:1560
 #, c-format
 msgid "'%s' does not exist in the bookmarks list"
-msgstr "'%s' ei eksisteeri  järjehoidjate loendis"
+msgstr "'%s' ei ole järjehoidjate loendis olemas"
 
 #: gtk/gtkfilesystemunix.c:1699
 #, c-format
@@ -1874,7 +1874,7 @@ msgstr "_Kursiiv"
 
 #: gtk/gtkstock.c:326
 msgid "_Jump to"
-msgstr "_Hüpe kuni"
+msgstr "_Hüppa kuni"
 
 #: gtk/gtkstock.c:327
 msgid "_Center"
