--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-02-03  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk/gdkkeynames.c: Make the gdk_key array const (#166075,
+	Tommi Komulainen)
+
 2005-02-02  Federico Mena Quintero  <federico@ximian.com>
 
 	* gtk/gtkfilechooserdefault.c (pending_select_paths_process):
