--- a/po-properties/ChangeLog
+++ b/po-properties/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-03  Kostas Papadimas <pkst@gnome.org>
+
+	* el.po: Updated  Greek translation
+
 2005-01-31  Žygimantas Beručka  <uid0@akl.lt>
 
 	* lt.po: Updated Lithuanian translation.
