--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-03  Kostas Papadimas <pkst@gnome.org>
+
+	* el.po: Updated  Greek translation.
+
 2005-02-02  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
