--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-03  Mark McLoughlin  <mark@skynet.ie>
+
+	* gtk/gtkicontheme.c: (load_themes): remove debug spew.
+
 2005-02-03  Matthias Clasen  <mclasen@redhat.com>
 
 	* gdk/gdkkeynames.c: Make the gdk_key array const (#166075,
