--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-02-03  Tor Lillqvist  <tml@novell.com>
+
+	* modules/input/gtkimcontextime.c (get_pango_attr_list): Use the
+	wide character version of ImmGetCompositionString() here,
+	too. (#165278, Takuro Ashie)
+
 2005-02-03  Mark McLoughlin  <mark@skynet.ie>
 
 	* gtk/gtkicontheme.c: (load_themes): remove debug spew.
