Updated Finnish translation.
2005-02-04  Pauli Virtanen  <pauli.virtanen@hut.fi>

        * fi.po: Updated Finnish translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-04  Pauli Virtanen  <pauli.virtanen@hut.fi>
+
+	* fi.po: Updated Finnish translation.
+
 2005-02-03  Kostas Papadimas <pkst@gnome.org>
 
 	* el.po: Updated  Greek translation.
