--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-02-04  Matthias Clasen  <mclasen@redhat.com>
+
+	* gtk/gtkentry.c (gtk_entry_create_layout): Avoid spurious
+	selection of RTL direction if the widget does not have 
+	focus.  (#164125, Frederic Crozat)
+
 2005-02-03  Tor Lillqvist  <tml@novell.com>
 
 	* modules/input/gtkimcontextime.c (get_pango_attr_list): Use the
