--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2005-02-04  Matthias Clasen  <mclasen@redhat.com>
 
+	* configure.in: Post-release version bump.
+
 	* === Released 2.6.2 ===
 
 	* NEWS: Updates
