--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-07  David Lodge <dave@cirt.net>
+                                                                                
+        * en_GB.po: Updated British translation.
+                                                                                
 2005-02-06  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
