--- a/gdk-pixbuf/ChangeLog
+++ b/gdk-pixbuf/ChangeLog
@@ -1,3 +1,11 @@
+2005-02-07  Matthias Clasen  <mclasen@redhat.com>
+
+	* io-pnm.c (pnm_read_next_value): Pass in the max number 
+	of bytes to read.
+	(pnm_read_ascii_scanline): And use it here to enable 
+	parsing of pbm images without whitespace between the 
+	pixels.  (#165803, Samuel Hym)
+
 2005-02-04  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.6.2 ===
