--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-08  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* th.po: Updated Thai translation.
+
 2005-02-08  Rhys Jones  <rhys@sucs.org>
 
 	* cy.po: Updated Welsh (fuzzy-bashing, plural-forms standardisation).
