--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-08  Christian Rose  <menthos@menthos.com>
+
+	* configure.in: Added "xh" to ALL_LINGUAS.
+
 2005-02-04  Matthias Clasen  <mclasen@redhat.com>
 
 	* configure.in: Post-release version bump.
