--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-13  David Lodge <dave@cirt.net>
+
+	* en_GB.po: Updated British translation.
+
 2005-02-11  Raphael Higino  <raphaelh@cvs.gnome.org>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation.
