Updated Persian translation.
2005-02-14  Roozbeh Pournader  <roozbeh@farsiweb.info>

        * fa.po: Updated Persian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-14  Roozbeh Pournader  <roozbeh@farsiweb.info>
+
+	* fa.po: Updated Persian translation.
+
 2005-02-13  David Lodge <dave@cirt.net>
 
 	* en_GB.po: Updated British translation.
